--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ compose-bom = "2023.10.01"
 coroutines = "1.7.3"
 kermit = "2.0.2"
 ktor = "2.3.7"
+prferences = "1.1.1"
+build-konfig = "0.15.1"
 
 [libraries]
 ## Core-Ktx
@@ -25,6 +27,10 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx
 
 ## Lifecycle-Ktx
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+
+## Multiplatform preferences
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "prferences" }
+multiplatform-settings-couroutine = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "prferences" }
 
 ## Compose
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -54,6 +60,7 @@ coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", ve
 
 ## Logger
 touchlab-kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
+build-konfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "build-konfig" }
 
 ## Testing
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -66,6 +73,8 @@ com-android-application = { id = "com.android.application", version.ref = "agp" 
 com-android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+build-konfig = { id = "com.codingfeline.buildkonfig" }
 
 [bundles]
 ktor-android = [
@@ -81,4 +90,8 @@ ktor-common = [
     "ktor-client-logging",
     "ktor-client-auth",
     "ktor-client-encoding"
+]
+multiplatform-preferences = [
+    "multiplatform-settings",
+    "multiplatform-settings-couroutine"
 ]
