--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".SpotifyApp"
         android:allowBackup="true"
@@ -13,10 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SpotifyKMP"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.SpotifyKMP">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
