Updated gradle version

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/deploymentTargetDropDown.xml
+/.idea/migrations.xml
 /.idea/assetWizardSettings.xml
 /.idea/inspectionProfiles
 .DS_Store
