Added IOS project.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,101 @@ shared/core-preferences/build
 shared/feature-homepage/build
 shared/feature-playlist-detail/build
 shared/feature-album-detail/build
+
+#====================================
+
+# Mac OS X Finder
+Ios/Pods
+Ios/Pods/Target Support Files/
+Ios/Pods/Pods.xcodeproj/project.pbxproj
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## User settings
+Ios/xcuserdata/
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+Ios/*.xcscmblueprint
+Ios/*.xccheckout
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+Ios/build/
+Ios/DerivedData/
+Ios/*.moved-aside
+Ios/*.pbxuser
+Ios/!default.pbxuser
+Ios/*.mode1v3
+Ios/!default.mode1v3
+Ios/*.mode2v3
+Ios/!default.mode2v3
+Ios/*.perspectivev3
+Ios/!default.perspectivev3
+
+## Obj-C/Swift specific
+Ios/*.hmap
+
+## App packaging
+Ios/*.ipa
+Ios/*.dSYM.zip
+Ios/*.dSYM
+
+## Playgrounds
+Ios/timeline.xctimeline
+Ios/playground.xcworkspace
+
+# Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+# Packages/
+# Package.pins
+# Package.resolved
+# *.xcodeproj
+#
+# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
+# hence it is not needed unless you have added a package configuration file to your project
+# .swiftpm
+
+Ios/.build/
+
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+#
+Ios/Pods/
+#
+# Add this line if you want to avoid checking in source code from the Xcode workspace
+# *.xcworkspace
+
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Ios/Carthage/Build/
+
+# Accio dependency management
+Ios/Dependencies/
+Ios/.accio/
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo.
+# Instead, use fastlane to re-generate the screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/#source-control
+
+Ios/fastlane/report.xml
+Ios/fastlane/Preview.html
+Ios/fastlane/screenshots/**/*.png
+Ios/fastlane/test_output
+
+# Code Injection
+#
+# After new code Injection tools there's a generated folder /iOSInjectionProject
+# https://github.com/johnno1962/injectionforxcode
+
+Ios/iOSInjectionProject/
+Ios/*.lock
